@@ -20,15 +20,21 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
             <configuration>
-                <source>18</source>
-                <target>18</target>
+                <release>18</release>
+                <compilerArgs>
+                    <arg>--enable-preview</arg>
+                </compilerArgs>
             </configuration>
         </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M6</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
